# HyperliquidBot

./: .gitignore  Cargo.toml  README.md  env_template.txt  log.file  res_perp.json  rustc-ice-2024-06-14T13_14_11-22278.txt  rustc-ice-2024-06-14T13_14_11-22279.txt  rustc-ice-2024-06-14T13_14_17-22418.txt  rustc-ice-2024-06-14T13_14_17-22419.txt  rustc-ice-2024-06-14T13_15_07-23094.txt  rustc-ice-2024-06-14T13_15_07-23095.txt  rustc-ice-2024-06-14T13_15_14-23267.txt  rustc-ice-2024-06-14T13_15_14-23268.txt  rustc-ice-2024-06-14T13_15_16-23351.txt  rustc-ice-2024-06-14T13_15_16-23352.txt  rustc-ice-2024-06-14T13_15_18-23427.txt  rustc-ice-2024-06-14T13_15_18-23428.txt  rustc-ice-2024-06-14T13_15_35-23617.txt  rustc-ice-2024-06-14T13_15_35-23618.txt  rustc-ice-2024-06-14T13_15_56-23849.txt  rustc-ice-2024-06-14T13_15_56-23850.txt  rustc-ice-2024-06-14T13_16_11-24015.txt  rustc-ice-2024-06-14T13_16_11-24016.txt  rustc-ice-2024-06-14T13_16_14-24067.txt  rustc-ice-2024-06-14T13_16_14-24068.txt  rustc-ice-2024-06-14T13_16_21-24141.txt  rustc-ice-2024-06-14T13_16_21-24142.txt  rustc-ice-2024-06-14T13_16_34-24282.txt  rustc-ice-2024-06-14T13_16_34-24283.txt  rustc-ice-2024-06-14T13_16_50-24477.txt  rustc-ice-2024-06-14T13_16_50-24478.txt  rustc-ice-2024-06-14T13_17_07-24662.txt  rustc-ice-2024-06-14T13_17_07-24663.txt  rustc-ice-2024-06-14T13_17_14-24759.txt  rustc-ice-2024-06-14T13_17_14-24760.txt  rustc-ice-2024-06-14T13_17_26-24877.txt  rustc-ice-2024-06-14T13_17_26-24878.txt  rustc-ice-2024-06-14T13_17_40-25046.txt  rustc-ice-2024-06-14T13_17_40-25047.txt  (+41 more)
sql/: bdd.sql
(+93 files in other folders)
