[package]
name = "hyperliquid_bot_rust"
version = "0.1.0"
edition = "2021"



[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["full"] }
dotenv = "0.15"

openssl = "0.10.62"
lazy_static = "1.4.0"
sqlx = { version = "0.5.0", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
ethers = {version = "2.0.14", features = ["eip712", "abigen"]}
ethers-core = "2.0.11"
ethers-signers = "2.0.13"
hex = "0.4.3"
chrono = "0.4.31"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1"
ring = "0.17.7"
async-trait = "0.1"
async-recursion = "1.0.5"
once_cell = "1.19.0"
reqwest = { version = "0.11.23", features = ["json"] }
url = "2.5.0"
teloxide-core = "0.9.1"
ethers_provider = "0.2.2"
ethers-providers = "2.0.13"
anyhow = "1.0.79"
eyre = "0.6.12"
serde_with = "3.6.1"
regex = "1.10.3"
alloy = "0.1.0"
ethers-contract = "2.0.13"
ethers_signer = "0.2.2"
ahash = { version = "0.8.11" }
futures = "0.3.30"
# hyperliquid_rust_sdk = "0.4.0"

# [patch.crates-io]
# ahash = { version = "0.7.7" } 
